--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "helmet": "^3.21.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
