--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,4 @@
 {
-  "presets": [ "es2015" ]
+  "presets": [["@babel/preset-env", { "targets": { "node": "current" } }]],
+  "plugins": [["@babel/plugin-proposal-object-rest-spread", { "useBuiltIns": true }]]
 }
